--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
             </plugin>
         </plugins>
     </build>
-    <version>1.0-SNAPSHOT</version>
+    <version>v0.1.0-alpha</version>
     <name>SarcasNess</name>
     <url>http://maven.apache.org</url>
     <dependencies>
