--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,32 @@
 name: Maven CI
 
-# Déclencheur du workflow
 on:
   push:
     branches:
-      - main  # Remplacer par la branche souhaitée (ex: main, dev, etc.)
-      - '**'  # Exécuter les tests sur toutes les branches
+      - '**'
   pull_request:
     branches:
-      - main  # S'assurer que les tests sont exécutés pour chaque PR vers main
+      - '**'
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # L'environnement utilisé pour exécuter la CI
+    runs-on: ubuntu-latest
 
     steps:
-      # Étape 1 : Récupérer le code du dépôt
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Étape 2 : Configurer JDK 11
       - name: Set up JDK 22
         uses: actions/setup-java@v1
         with:
           java-version: '22'
 
-      # Étape 3 : Exécuter la commande Maven pour compiler et tester
+      - name: Cache Maven dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven
+
       - name: Build and run tests
-        run: mvn clean install
+        run: mvn clean test
